objects/Flosum__Manifest__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Component_Name__c</fullName>
        <formula>HYPERLINK(
             &apos;/&apos;+Flosum__Metadata_Item__c,
               Flosum__Metadata_Item__r.Flosum__API_Name__c,
            &apos;_self&apos;
          )</formula>
        <label>Component Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Component_Type__c</fullName>
        <formula>Flosum__Metadata_Item__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Component Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Last_Updated_On__c</fullName>
        <formula>Flosum__Metadata_Item__r.Flosum__Last_Modified_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Updated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Metadata_Item__c</fullName>
        <label>Metadata Item</label>
        <referenceTo>Flosum__Metadata_Item__c</referenceTo>
        <relationshipLabel>Manifest</relationshipLabel>
        <relationshipName>Manifest</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Flosum__Patch__c</fullName>
        <label>Patch</label>
        <referenceTo>Flosum__Patch__c</referenceTo>
        <relationshipLabel>Manifest</relationshipLabel>
        <relationshipName>Manifest</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Manifest</label>
    <nameField>
        <displayFormat>M-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Manifest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manifest</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>